Fix overlapping issue for other pages

--- a/landingPage.css
+++ b/landingPage.css
@@ -337,3 +337,12 @@ nav a:focus {
   color: white !important;
   transition: all 0.4s ease-in-out;
 }
+
+/* --- Adjustments for other pages --- */
+#tc-main-shortcuts, #tc-main-container-row-fluid{
+    top: 150px;
+}
+#tc-main-shortcuts{
+  padding-top: 90px;
+  position: absolute;
+}
